[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprite/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 4 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
